<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">atTranslate</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="authors">Autorzy</string>
    <string name="end">Zakończ</string>
    <string name="translator">Tłumacz</string>
    <string name="help">Pomoc</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_help">HelpActivity</string>
    <string name="title_activity_authors">AuthorsActivity</string>

</resources>
